--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
    "author": "",
    "private": true,
    "license": "UNLICENSED",
+   "resolutions": {
+      "**/pretty-format": "25.1.0"
+   },
    "scripts": {
       "prebuild": "rimraf dist",
       "build": "nest build",
@@ -13,7 +16,6 @@
       "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
-      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
       "test": "jest",
       "test:watch": "jest --watch",
       "test:cov": "jest --coverage",
@@ -33,7 +35,7 @@
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
       "rimraf": "^3.0.2",
-      "rxjs": "^6.6.6",
+      "rxjs": "^6.3.3",
       "typeorm": "0.2.32"
    },
    "devDependencies": {
@@ -44,11 +46,6 @@
       "@types/jest": "^26.0.22",
       "@types/node": "^8.0.29",
       "@types/supertest": "^2.0.10",
-      "@typescript-eslint/eslint-plugin": "^4.19.0",
-      "@typescript-eslint/parser": "^4.19.0",
-      "eslint": "^7.22.0",
-      "eslint-config-prettier": "^8.1.0",
-      "eslint-plugin-prettier": "^3.3.1",
       "jest": "^26.6.3",
       "prettier": "^2.2.1",
       "supertest": "^6.1.3",
@@ -56,7 +53,7 @@
       "ts-loader": "^8.0.18",
       "ts-node": "3.3.0",
       "tsconfig-paths": "^3.9.0",
-      "typescript": "3.3.3333"
+      "typescript": "^4.2.3"
    },
    "jest": {
       "moduleFileExtensions": [
